--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,14 +12,15 @@ source:
 build:
   number: 1000
   script: "{{ PYTHON }} -m pip install . --no-deps --ignore-installed --no-cache-dir -vvv"
+  skip: true  # [py<36]
 
 requirements:
   host:
-    - python  >=3.6.0
+    - python
     - pip
   run:
     - python
-    - dataclasses  # [py36]
+    - dataclasses
     - future
     - msgpack-python  >=0.5.2
     - python-rapidjson
