--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,33 +1,39 @@
 {% set name = "rpcq" %}
-{% set version = "3.5.0" %}
+{% set version = "3.9.2" %}
+
 
 package:
   name: {{ name|lower }}
   version: {{ version }}
 
 source:
-  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
-  sha256: a340a770d6aca34428bcc0fe60d891231c31c4fc26eaebd9dde04abff00f12d6
+  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/rpcq-{{ version }}.tar.gz
+  sha256: 690c6e5ca8b2a6831c4f34e527b3adb276ce8656f43e851dfd90bc58961f5a69
 
 build:
-  noarch: python
   number: 0
-  script: {{ PYTHON }} -m pip install . --no-deps --ignore-installed --no-cache-dir -vvv
+  noarch: python
+  script: {{ PYTHON }} -m pip install . -vv
 
 requirements:
   host:
-    - python  >=3.6.0
     - pip
+    - python >=3.6
   run:
-    - python
-    - msgpack-python  >=0.6,<1.0
+    - msgpack-python >=0.6,<1.0
+    - python >=3.6
     - python-rapidjson
-    - pyzmq  >=17
+    - pyzmq >=17
     - ruamel.yaml
 
 test:
   imports:
     - rpcq
+    - rpcq.external
+  commands:
+    - pip check
+  requires:
+    - pip
 
 about:
   home: https://www.rigetti.com
@@ -42,3 +48,4 @@ extra:
     - jmackeyrigetti
     - kilimanjaro
     - notmgsk
+    - BastianZim
